Fix visibility issues of student indicators.

--- a/client/src/components/Classroom/components/Students.css
+++ b/client/src/components/Classroom/components/Students.css
@@ -8,21 +8,21 @@
 .Student {
     position: relative;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    height: 120px;
     width: 200px;
     margin: 0px 10px;
 }
 
 .Student-video {
-    height: 120px;
-    width: 200px;
+    height: 108px;
+    width: 180px;
     margin: 0px 10px;
 }
 
 .Student-indicators {
-    position: absolute;
-    top: -35px;
+    position: relative;
+    left: -7.5%;
     width: 115%;
     display: flex;
     justify-content: space-between;
@@ -38,16 +38,16 @@
     background-repeat: no-repeat;
     background-position: center center;
     z-index: 2;
-    display: none;
+    visibility: hidden;
 }
 
 .Student-indicators.show .indicator {
-    display: block;
+    visibility: visible;
     cursor: pointer;
 }
 
 .Student-indicators .indicator.active {
-    display: block;
+    visibility: visible;
     cursor: pointer;
 }
 
